# bb_rework

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
bb_backend/: .env  Cargo.toml  dhparam-8192.pem
bb_backend/crypto/: dhparam-4096.pem
bb_backend/migrations/: 20211014105650_create_authentication.sql  20211014105655_create_roles.sql  20211014105701_create_employees.sql  20211022104618_create_sessions.sql
bb_backend/src/: crypto.rs  logger.rs  main.rs  reply.rs
bb_backend/src/dtos/: addresses.rs  authentication.rs  core.rs  employees.rs  login.rs  mod.rs
bb_backend/src/handlers/: addresses.rs  authentication.rs  core.rs  employees.rs  mod.rs  telephone_numbers.rs
bb_backend/src/middleware/: sessions.rs
bb_backend/src/models/: addresses.rs  authentication.rs  employees.rs  mod.rs  prelude.rs  roles.rs  sessions.rs  telephone_numbers.rs
bb_backend/src/routes/: authentication.rs  core.rs  mod.rs
bb_frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
bb_frontend/src/: main.rs
bb_frontend/src/components/: auth_login.rs  logo.rs  mod.rs  modal.rs  navbar.rs  navbar_acc.rs  table.rs
bb_frontend/src/js_bind/: modal.rs
bb_frontend/src/pages/: auth.rs  edit_employee.rs  employees.rs  home.rs  login.rs  mod.rs  not_found.rs
migrations/: 20211014105611_create_addresses.sql  20211014105642_create_telephone_numbers.sql  20211014105650_create_authentication.sql  20211014105701_create_employees.sql
src/: crud.rs  db.rs  main.rs
src/dtos/: mod.rs  sessions.rs  telephone_numbers.rs
src/handlers/: addresses.rs  authentication.rs  employees.rs  telephone_numbers.rs
src/middleware/: data.rs  mod.rs
src/models/: addresses.rs  authentication.rs  mod.rs
src/routes/: addresses.rs  authentication.rs  core.rs  employees.rs  mod.rs  telephone_numbers.rs
