[package]
name = "bb_rework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
warp = "0.3"
thiserror = "1.0.29"
anyhow = "1.0.44"
log = "0.4.14"
hyper = "0.14.13"
listenfd = "0.3.5"
uuid = "0.8.2"

[dependencies.flexi_logger]
version = "0.19.3"
features = ["async", "specfile", "compress"]

[dependencies.sea-orm]
version = "0.3.0"
default-features = false
features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "serde_json", "log"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.68"

[dependencies.tokio]
version = "1.12.0"
features = ["full"]