[workspace]
members = ["bb_backend", "bb_frontend"]

[profile.release]
# less code to include into binary
panic = 'abort'
# link time optimization using using whole-program analysis
lto = true

[profile.release.package.bb_frontend]
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'