[package]
name = "bb_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#yew = "0.18.0"
#yew-router = "0.15.0"
yew = { git = "https://github.com/yewstack/yew/" }
yew-router = { git = "https://github.com/yewstack/yew/" }
web-sys = { version = "0.3.55", features = ["HtmlFormElement", "DomTokenList", "HtmlCollection", "HtmlFormControlsCollection"] }
wasm-logger = "0.2.0"
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.68"
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.78"
reqwasm = "0.2.1"
wasm-bindgen-futures = "0.4.28"
rand = "0.8.4"
#rand_core = "0.6.3"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
num-bigint = "0.4"
num-traits = "0.2.14"
hmac-sha256 = "0.1.7"
getrandom = { version = "0.2.3", features = ["js"] }
indexmap = "=1.6.2"